:recycle: Refactoring Wine & Vineyards throughout the side. Changing translation. Fixing language z-index. Fixes #1

--- a/src/assets/sass/pages/_landing.scss
+++ b/src/assets/sass/pages/_landing.scss
@@ -339,7 +339,7 @@ body.is-mobile {
   top: 0;
   left: 0;
   cursor: pointer;
-  z-index: 10;
+  z-index: 10000000;
 
 }
 
