--- a/src/assets/sass/pages/_tile_page.scss
+++ b/src/assets/sass/pages/_tile_page.scss
@@ -65,7 +65,7 @@
   }
 
   #winestayHeader {
-    @include vendor('background-image', ('linear-gradient(to top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../images/wine_stay/banner.jpg")'));
+    @include vendor('background-image', ('linear-gradient(to top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../images/wine_vineyards/banner.jpg")'));
   }
 
   #faqHeader {
